<resources>
    <string name="app_name">Gately</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_to_open_sesame1">Gately</string>
    <string name="welcome_to_open_sesame2">Open your gate anywhere, anytime</string>
    <string name="setup_your_gate">Set Up</string>
    <string name="gate_details">Add A Gate step</string>
    <string name="hint_title">Title</string>
    <string name="hint_gate_phone_number">Gate Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="user_my_location">Use My Location</string>
    <string name="next">Next</string>
    <string name="hint_name_of_the_get">What\'s The Name Of The Gate?</string>
    <string name="step_1_title_text">Enter the gate\'s name</string>
    <string name="step_1_hint_text">Enter gate name</string>
    <string name="step_1_desc">This is the title that will be shown in the list..</string>
    <string name="step_2_title_text">Enter the gate\'s number</string>
    <string name="step_2_hint_text">Enter phone number</string>
    <string name="step_2_desc">This is description for step 2</string>
    <string name="step_3_desc">step 3 desc</string>
    <string name="step_3_title_text">What\'s the gate\'s location?</string>
    <string name="step_3_hint_text">Enter location</string>
    <string name="welcome">Welcome To</string>
    <string name="distance_settings">Distance Settings</string>
    <string name="opening_distance">Opening Distance</string>

    <string name="gps_activation_distance">GPS activation distance</string>
    <string name="two_kilometers">2 km</string>
    <string name="test_proximity">Test</string>
</resources>
