<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView style="@style/splash_image" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:alpha="1"
        android:orientation="vertical">

        <com.shmoontz.gately.views.TextViewRalewayMedium
            android:id="@+id/txt0"
            style="@style/splash_middleText1"
            android:text="@string/welcome" />

        <com.shmoontz.gately.views.TextViewRalewayMedium
            android:id="@+id/txt1"
            style="@style/splash_middleText1"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/welcome_to_open_sesame1"
            android:textSize="40dp" />

        <com.shmoontz.gately.views.TextViewRalewayMedium
            android:id="@+id/txt2"
            style="@style/splash_middleText2"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/welcome_to_open_sesame2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <com.shmoontz.gately.views.ButtonRaleWay
            android:id="@+id/action"
            style="@style/splash_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setup_your_gate" />

        <com.shmoontz.gately.views.ButtonRaleWay
            android:id="@+id/actionTest"
            style="@style/splash_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/test_proximity" />
    </LinearLayout>

</FrameLayout>
