<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
     tools:context=".Main">

     <ImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/img_splash_bg"
        />

     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center" 
        >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/middleText1"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="24dp"
        android:text="@string/welcome_to_open_sesame1"
        />

        <TextView
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/middleText2"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:text="@string/welcome_to_open_sesame2"
        />
    </LinearLayout>

    <Button
        android:textColor="#fff"
        android:background="@color/primary"
        android:text="@string/setup_your_gate"
        android:layout_margin="20dp"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/action"
    />
</FrameLayout>
